# aaoffline

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: main.yml
cli/: Cargo.toml
cli/src/: args.rs  io.rs  main.rs
cli/tests/: integration_test.rs
core/: Cargo.toml
core/src/: args.rs  constants.rs  data.rs  download.rs  fs.rs  lib.rs  middleware.rs  transform.rs
core/src/data/: case.rs  player.rs  site.rs
gui/: Cargo.toml
gui/src/: app.rs  args.rs  main.rs  messenger.rs
src/: args.rs  constants.rs  data.rs  download.rs  main.rs  middleware.rs  transform.rs
src/data/: case.rs  player.rs  site.rs
tests/: integration_test.rs
wasm/: Cargo.toml
wasm/src/: fs.rs  lib.rs
wasm/www/: index.js  package-lock.json  package.json  webpack.config.js
