[package]
name = "aaoffline"
description = "Downloads cases from Ace Attorney Online to be playable offline"
repository = "https://github.com/falko17/aaoffline"
version = "1.3.0"
edition = "2021"
license = "MIT"
authors = ["Falko Galperin <github@falko.de>"]

[dependencies]
anyhow = { version = "1.0.94", features = ["backtrace"] }
base64 = "0.22.1"
bytes = "1.9.0"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
clap-verbosity-flag = "3.0.1"
colored = "3.0.0"
const_format = "0.2.34"
dialoguer = "0.11.0"
env_logger = "0.11.5"
exitcode = "1.1.2"
futures = "0.3.31"
human-panic = "2.0.2"
indicatif = "0.17.9"
infer = { version = "0.16.0", default-features = false }
itertools = "0.14.0"
log = "0.4.22"
mime2ext = "0.1.53"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["gzip"] }
reqwest-middleware = "0.4.0"
reqwest-retry = "0.7.0"
sanitize-filename = "0.6.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde_with = { version = "3.11.0", features = ["chrono"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["fs"] }
urlencoding = "2.1.3"

[profile.release]
codegen-units = 1
lto = true

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
too_many_lines = "allow"
too_many_arguments = "allow"

[dev-dependencies]
assert_cmd = "2.0.16"
glob = "0.3.1"
headless_chrome = "1.0.15"
maplit = "1.0.2"
rstest = "0.24.0"
rstest_reuse = "0.7.0"
tempfile = "3.14.0"
