[workspace]
members = ["core", "cli", "wasm", "gui"]
resolver = "3"

[workspace.package]
repository = "https://github.com/falko17/aaoffline"
edition = "2024"
license = "MIT"
authors = ["Falko Galperin <github@falko.de>"]
version = "2.0.0"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
too_many_lines = "allow"
too_many_arguments = "allow"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
