[package]
name = "aaoffline-cli"
description = "Downloads cases from Ace Attorney Online to be playable offline (command-line interface)"
version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "aaoffline"
path = "src/main.rs"

[dependencies]
aaoffline = { path = "../core", features = ["fs"] }
anyhow = { version = "1.0.97", features = ["backtrace"] }
async-trait = "0.1.89"
clap = { version = "4.5.53", features = ["derive"] }
dialoguer = "0.12.0"
env_logger = "0.11.8"
log = "0.4.29"
futures = "0.3.31"
human-panic = "2.0.4"
tokio = { version = "1.48.0", features = ["full"] }
clap-verbosity-flag = "3.0.4"
serde = "1.0.228"
indicatif = "0.18.3"
colored = "3.0.0"

[dev-dependencies]
assert_cmd = "2.0.16"
glob = "0.3.2"
headless_chrome = "1.0.17"
itertools = "0.14.0"
maplit = "1.0.2"
regex = "1.11.1"
rstest = "0.26.0"
rstest_reuse = "0.7.0"
tempfile = "3.18.0"
