[package]
name = "aaoffline-cli"
description = "Downloads cases from Ace Attorney Online to be playable offline (command-line interface)"
version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "aaoffline"
path = "src/main.rs"

[dependencies]
aaoffline = { path = "../core", features = ["fs"] }
anyhow = { version = "1.0.101", features = ["backtrace"] }
async-trait = "0.1.89"
clap = { version = "4.5.59", features = ["derive"] }
dialoguer = "0.12.0"
env_logger = "0.11.9"
log = "0.4.29"
human-panic = "2.0.6"
tokio = { version = "1.49.0", features = ["full"] }
clap-verbosity-flag = "3.0.4"
serde = "1.0.228"
indicatif = "0.18.4"
colored = "3.1.1"

[dev-dependencies]
assert_cmd = "2.1.2"
glob = "0.3.3"
headless_chrome = "1.0.21"
itertools = "0.14.0"
maplit = "1.0.2"
regex = "1.12.3"
rstest = "0.26.1"
rstest_reuse = "0.7.0"
tempfile = "3.25.0"
