[package]
name = "aaoffline"
description = "Downloads cases from Ace Attorney Online to be playable offline"
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true

[features]
fs = ["tokio/fs"]

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
async-trait = "0.1.87"
base64 = "0.22.1"
bytes = "1.10.1"
chrono = "0.4.40"
colored = "3.0.0"
const_format = "0.2.34"
exitcode = "1.1.2"
futures = "0.3.31"
infer = { version = "0.19.0", default-features = false }
itertools = "0.14.0"
log = "0.4.26"
mime2ext = "0.1.53"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["gzip"] }
reqwest-middleware = "0.4.1"
reqwest-retry = "0.8.0"
sanitize-filename = "0.6.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
serde_with = { version = "3.12.0", features = ["chrono"] }
tokio = { version = "1.44.0", features = ["macros", "io-util", "rt"] }
urlencoding = "2.1.3"
