[package]
name = "aaoffline"
description = "Downloads cases from Ace Attorney Online to be playable offline"
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true

[features]
fs = ["tokio/fs"]

[dependencies]
anyhow = { version = "1.0.101", features = ["backtrace"] }
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = "1.11.1"
chrono = "0.4.43"
colored = "3.1.1"
const_format = "0.2.35"
exitcode = "1.1.2"
futures = "0.3.32"
infer = { version = "0.19.0", default-features = false }
itertools = "0.14.0"
log = "0.4.29"
mime2ext = "0.1.54"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["gzip"] }
reqwest-middleware = "0.5.1"
reqwest-retry = "0.9.1"
sanitize-filename = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = { version = "3.16.1", features = ["chrono"] }
tokio = { version = "1.49.0", features = ["macros", "io-util", "rt"] }
urlencoding = "2.1.3"
