[package]
name = "aaoffline-gui"
description = "Downloads cases from Ace Attorney Online to be playable offline (GUI)"
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true

[[bin]]
name = "aaoffline-gui"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.97"
colored = { version = "3.0.0", features = ["no-color"] }
eframe = "0.33.0"
egui = "0.33.0"
egui_form = { version = "0.7.0", features = ["validator_garde"] }
egui_logger = "0.9.0"
garde = { version = "0.22.0", features = ["derive"] }
log = "0.4.26"
rfd = "0.15.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
aaoffline = { path = "../core", features = ["fs"] }
tokio = { version = "1.44.0", features = ["rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
aaoffline = { path = "../core" }
tokio = { version = "1.44.0", features = ["rt"] }

[lints]
workspace = true
